WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270130
Close extension popup web views when the web content process terminates or window.close is called
https://bugs.webkit.org/show_bug.cgi?id=270130
Summary
Close extension popup web views when the web content process terminates or wi...
Brian Weinstein
Reported
2024-02-26 15:39:23 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-26 15:39:38 PST
<
rdar://problem/123655695
>
Brian Weinstein
Comment 2
2024-02-26 15:42:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25139
EWS
Comment 3
2024-02-26 18:37:12 PST
Committed
275360@main
(eeef2a286027): <
https://commits.webkit.org/275360@main
> Reviewed commits have been landed. Closing PR #25139 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug