Close extension popup web views when the web content process terminates or window.close is called https://bugs.webkit.org/show_bug.cgi?id=270130 rdar://123468009

Reviewed by Timothy Hatcher.

On iOS, this will lead to the UIViewController being closed, which leads to a better experience for the client.

On Mac, if the web view lives in an NSPanel, WebKit will close the window that the web view is in.

* Source/WebKit/UIProcess/Extensions/Cocoa/WebExtensionActionCocoa.mm:
(-[_WKWebExtensionActionWebViewDelegate webViewWebContentProcessDidTerminate:]):
(-[_WKWebExtensionActionWebViewDelegate webViewDidClose:]):

Canonical link: https://commits.webkit.org/275360@main